Fixed: responsive menu overlapping language switch

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -31,6 +31,7 @@
     ul {
         display: contents;
         list-style-type: none;
+        column-gap: 1rem;
         
         li {
             color: $primary-color-dark;
