--- a/styles/header/Header.module.scss
+++ b/styles/header/Header.module.scss
@@ -4,84 +4,91 @@
 .Header {
   position: absolute;
   padding: 0rem 10vw;
+  padding-right: 0;
   top: 0;
   left: 0;
   width: 100%;
   height: 100px;
 
   display: grid;
-  grid-template-columns: 1fr 8fr 1fr;
-  grid-template-areas: "logo nav menu";
-  column-gap: 4vw;
+  grid-template-columns: 1fr 8fr min-content 1fr;
+  grid-template-areas: "logo nav right menu";
   align-items: center;
 
   background-color: transparent;
   z-index: 8;
-}
 
-.HeaderLogo {
-  grid-area: logo;
-  place-content: center;
-  text-align: center;
-
-  font-size: font.$title-size;
-  font-weight: 900;
-  font-style: oblique;
-  line-height: 56px;
-
-  label {
-    color: color.$primary-color-dark;
-
-    &:hover{
-      cursor: pointer;
-    }
-  }
-
-  span {
-    color: color.$secondary-color-dark;
-  }
-}
-
-.HeaderNav {
-    grid-area: nav;
-    display: flex;
-    flex-flow: row wrap;
-    align-content: center;
-    justify-content: flex-start;
-    column-gap: 2vw;
-
-    a {
-        @include font.nav;
-        text-decoration: none;
+  .HeaderLogo {
+    grid-area: logo;
+    place-content: center;
+    text-align: center;
+  
+    font-size: font.$title-size;
+    font-weight: 900;
+    font-style: oblique;
+    line-height: 56px;
+  
+    label {
+      color: color.$primary-color-dark;
+  
+      &:hover{
+        cursor: pointer;
       }
-    
-    a:active {  // TODO: underline should stay on active current page
-      text-decoration: underline;
-      text-decoration-thickness: 2px;
     }
+  
+    span {
+      color: color.$secondary-color-dark;
+    }
+  }
+  
+  .HeaderNav {
+      grid-area: nav;
+      display: flex;
+      flex-flow: row wrap;
+      align-content: center;
+      justify-content: flex-start;
+      padding: 0 4vw;
+      column-gap: 2vw;
+  
+      a {
+          @include font.nav;
+          text-decoration: none;
+        }
+      
+      a:active {  // TODO: underline should stay on active current page
+        text-decoration: underline;
+        text-decoration-thickness: 2px;
+      }
+  
+      ul {
+          display: contents;
+          list-style-type: none;
+      }
+  
+      li {
+          color: color.$primary-color-dark;
+      }
+  
+      li:hover {
+          color: color.$secondary-color-dark;
+      }
+  }
+  
+  .RightOptions {
+    grid-area: right;
 
-    ul {
-        display: contents;
-        list-style-type: none;
-    }
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-self: right;
+    column-gap: 2rem;
+  }
 
-    li {
-        color: color.$primary-color-dark;
-    }
-
-    li:hover {
-        color: color.$secondary-color-dark;
-    }
+  .Menu {
+    grid-area: menu;
+  }
 }
 
-.RightOptions {
-  grid-area: menu;
-  display: flex;
-  flex-direction: row;
-  align-content: center;
-  justify-self: right;
-  column-gap: 2rem;
-}
 
 @media only screen and (max-width: 1366px) {
   
@@ -90,11 +97,28 @@
 @media screen and (max-width: 720px) {
   .Header {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas: "logo menu";
-  }
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-template-areas: "right logo menu";
+    padding: 0;
+    column-gap: 0;
 
-  .HeaderNav {
-    display: none;
+    .HeaderNav {
+      display: none;
+      visibility: hidden;
+    }
+  
+    .HeaderLogo {
+      justify-self: center;
+      font-size: 2rem;
+      font-weight: 700;
+      font-style: oblique;
+      line-height: 56px;
+    }
+  
+    .RightOptions {
+      padding-left: 1rem;
+      justify-self: left;
+      font-size: 1rem;
+    }
   }
 }
